<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_perfilAdmin"
            android:icon="@android:drawable/ic_dialog_info"
            android:title="@string/MiPerfil" />
        <item
            android:id="@+id/nav_administradores"
            android:icon="@android:drawable/ic_menu_edit"
            android:title="Administradores" />
        <item
            android:id="@+id/nav_clientesAdmin"
            android:icon="@android:drawable/ic_menu_edit"
            android:title="@string/clientes" />
        <item
            android:id="@+id/nav_proveedoresAdmin"
            android:icon="@android:drawable/ic_menu_agenda"
            android:title="Proveedores" />
        <item
            android:id="@+id/nav_productosAdmin"
            android:icon="@android:drawable/ic_input_add"
            android:title="Productos" />
        <item
            android:id="@+id/nav_piezasAdmin"
            android:icon="@android:drawable/ic_input_add"
            android:title="Piezas" />
        <item
            android:id="@+id/nav_ordenesAdmin"
            android:icon="@android:drawable/ic_popup_reminder"
            android:title="Órdenes" />
    </group>

    <item android:title="@string/otros">
        <menu>
            <item
                android:id="@+id/nav_manualAdmin"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/Manual" />
            <item
                android:id="@+id/nav_salirAdmin"
                android:icon="@android:drawable/ic_notification_clear_all"
                android:title="@string/CerrarSesion" />
        </menu>
    </item>

</menu>
