<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ipn.sofficcesware.com.mqst.cliente.ContactanosActivity">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txt_DeseasContacto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ContactoCorreo"
                android:textSize="25sp"
                android:layout_marginTop="19dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:gravity="center_horizontal" />

            <EditText
                android:id="@+id/edit_UsuarioContacto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="@string/pedirUsuario"
                tools:layout_editor_absoluteX="85dp"
                tools:layout_editor_absoluteY="116dp"
                android:layout_marginTop="32dp"
                android:layout_below="@+id/txt_DeseasContacto"
                android:layout_alignLeft="@+id/edit_mensajeContacto"
                android:layout_alignStart="@+id/edit_mensajeContacto"
                android:layout_alignRight="@+id/edit_mensajeContacto"
                android:layout_alignEnd="@+id/edit_mensajeContacto" />

            <EditText
                android:id="@+id/edit_mensajeContacto"
                android:layout_width="221dp"
                android:layout_height="188dp"
                android:ems="10"
                android:inputType="textMultiLine"
                tools:layout_editor_absoluteX="82dp"
                tools:layout_editor_absoluteY="199dp"
                android:layout_marginTop="26dp"
                android:hint="@string/EscribirMensaje"
                android:layout_below="@+id/edit_UsuarioContacto"
                android:layout_alignLeft="@+id/btn_borrarEnvio"
                android:layout_alignStart="@+id/btn_borrarEnvio"
                android:layout_alignRight="@+id/btn_aceptarEnvio"
                android:layout_alignEnd="@+id/btn_aceptarEnvio" />

            <Button
                android:id="@+id/btn_borrarEnvio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:text="@string/Limpiar"
                android:textColor="@color/azul"
                android:layout_marginTop="39dp"
                android:layout_below="@+id/edit_mensajeContacto"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="34dp"
                android:layout_marginStart="34dp" />

            <Button
                android:id="@+id/btn_aceptarEnvio"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Aceptar"
                android:layout_marginRight="44dp"
                android:layout_marginEnd="44dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />

        </RelativeLayout>
    </ScrollView>

</RelativeLayout>
